clippy_output.txt
    Checking vantadb v0.2.0 (C:\Users\Eros\VantaDB Proyect\VantaDB)
error[E0308]: mismatched types
   --> tests\core\vector_scale_check.rs:28:49
    |
 28 |                 let mut node = UnifiedNode::new(i as u64);
    |                                ---------------- ^^^^^^^^ expected `u128`, found `u64`
    |                                |
    |                                arguments to this function are incorrect
    |
note: associated function defined here
   --> src\node.rs:746:12
    |
746 |     pub fn new(id: u128) -> Self {
    |            ^^^
help: you can convert a `u64` to a `u128`
    |
 28 |                 let mut node = UnifiedNode::new((i as u64).into());
    |                                                 +        ++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `vantadb` (test "vector_scale_check") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:92:49
    |
 92 |         let mut node = UnifiedNode::with_vector(i as u64, vec![v, v, v]);
    |                        ------------------------ ^^^^^^^^ expected `u128`, found `u64`
    |                        |
    |                        arguments to this function are incorrect
    |
note: associated function defined here
   --> src\node.rs:769:12
    |
769 |     pub fn with_vector(id: u128, vector: Vec<f32>) -> Self {
    |            ^^^^^^^^^^^
help: you can convert a `u64` to a `u128`
    |
 92 |         let mut node = UnifiedNode::with_vector((i as u64).into(), vec![v, v, v]);
    |                                                 +        ++++++++

error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:101:18
    |
101 |             .get(i as u64)
    |              --- ^^^^^^^^ expected `u128`, found `u64`
    |              |
    |              arguments to this method are incorrect
    |
note: method defined here
   --> src\storage\engine\ops.rs:310:12
    |
310 |     pub fn get(&self, id: u128) -> Result<Option<UnifiedNode>> {
    |            ^^^
help: you can convert a `u64` to a `u128`
    |
101 |             .get((i as u64).into())
    |                  +        ++++++++

error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:282:49
    |
282 |         let mut node = UnifiedNode::with_vector(i as u64, vec![v, v, v]);
    |                        ------------------------ ^^^^^^^^ expected `u128`, found `u64`
    |                        |
    |                        arguments to this function are incorrect
    |
note: associated function defined here
   --> src\node.rs:769:12
    |
769 |     pub fn with_vector(id: u128, vector: Vec<f32>) -> Self {
    |            ^^^^^^^^^^^
help: you can convert a `u64` to a `u128`
    |
282 |         let mut node = UnifiedNode::with_vector((i as u64).into(), vec![v, v, v]);
    |                                                 +        ++++++++

error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:292:53
    |
292 |             let mut node = UnifiedNode::with_vector(i as u64, vec![v, v, v]);
    |                            ------------------------ ^^^^^^^^ expected `u128`, found `u64`
    |                            |
    |                            arguments to this function are incorrect
    |
note: associated function defined here
   --> src\node.rs:769:12
    |
769 |     pub fn with_vector(id: u128, vector: Vec<f32>) -> Self {
    |            ^^^^^^^^^^^
help: you can convert a `u64` to a `u128`
    |
292 |             let mut node = UnifiedNode::with_vector((i as u64).into(), vec![v, v, v]);
    |                                                     +        ++++++++

error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:423:57
    |
423 |                 let mut node = UnifiedNode::with_vector(nid as u64, vec![0.1, 0.2]);
    |                                ------------------------ ^^^^^^^^^^ expected `u128`, found `u64`
    |                                |
    |                                arguments to this function are incorrect
    |
note: associated function defined here
   --> src\node.rs:769:12
    |
769 |     pub fn with_vector(id: u128, vector: Vec<f32>) -> Self {
    |            ^^^^^^^^^^^
help: you can convert a `u64` to a `u128`
    |
423 |                 let mut node = UnifiedNode::with_vector((nid as u64).into(), vec![0.1, 0.2]);
    |                                                         +          ++++++++

error[E0308]: mismatched types
   --> tests\core\regression_certification.rs:438:35
    |
438 |             let node = engine.get(nid as u64).unwrap().expect("node must exist");
    |                               --- ^^^^^^^^^^ expected `u128`, found `u64`
    |                               |
    |                               arguments to this method are incorrect
    |
note: method defined here
   --> src\storage\engine\ops.rs:310:12
    |
310 |     pub fn get(&self, id: u128) -> Result<Option<UnifiedNode>> {
    |            ^^^
help: you can convert a `u64` to a `u128`
    |
438 |             let node = engine.get((nid as u64).into()).unwrap().expect("node must exist");
    |                                   +          ++++++++

error: could not compile `vantadb` (test "regression_certification") due to 6 previous errors
